# paddy

./: .gitignore  README.md  pyproject.toml  setup.py
Chromatin2Exp/: 1.tsv  2.tsv  3.tsv  README.md  ce_eval.py  ce_predict.py  ce_train.py  ce_train_grid.py  merge.tsv  params.promoterAI.yaml  params.test.yaml  params.yaml  params_grid.yaml  params_pred.yaml  predict.h5  predict_predictions.tsv
Chromatin2Exp/1_log_out/train/: events.out.tfevents.1749293627.glc.562780.0.v2
Chromatin2Exp/1_log_out/valid/: events.out.tfevents.1749293627.glc.562780.1.v2
Chromatin2Exp/2_log_out/train/: events.out.tfevents.1749293666.glc.564737.0.v2
Chromatin2Exp/2_log_out/valid/: events.out.tfevents.1749293666.glc.564737.1.v2
Chromatin2Exp/3_log_out/train/: events.out.tfevents.1749293744.glc.567616.0.v2
Chromatin2Exp/3_log_out/valid/: events.out.tfevents.1749293744.glc.567616.1.v2
Chromatin2Exp/analysis/: attention_martix_visualization.ipynb  attention_scores_chr1_69993520-70517808_pooled.eps  seed_plot.ipynb
examples/: params.yaml  params_grid.yaml
examples/analysis/: attention_martix_visualization-cp.ipynb  attention_martix_visualization.ipynb  test.ipynb
src/paddy/: bed.py  blocks.py  dataset.py  dna.py  layers.py  metrics.py  seqnn.py  trainer.py
src/paddy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/paddy/helpers/: extract_label.py
src/paddy/scripts/: paddy_data.py  paddy_eval.py  paddy_train.py  paddy_train_grid.py
