[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paddy"
version = "0.1.0"
description = "Deep Learning models"
authors = [
    {name = "GooLey", email = "goley04@foxmail.com"}
]
readme = "README.md"
requires-python = "==3.10.*"
license = {text = "MIT"}
dependencies = [
    "tensorflow>=2.15,<2.16",
    "numpy",
    "pyyaml",
    "pandas",
    "h5py",
    "natsort",
    "tqdm",
    "google-cloud-storage",
    "pysam",  
    "matplotlib",  
    "tensorboard",  
    "scikit-learn",
    "openpyxl",  
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
paddy_train = "paddy.scripts.paddy_train:main"
paddy_data = "paddy.scripts.paddy_data:main"
paddy_eval = "paddy.scripts.paddy_eval:main"
paddy_train_grid = "paddy.scripts.paddy_train_grid:main"
extract_label = "paddy.helpers.extract_label:main" 
